tdf#162823 package: fix loss of ODF encrypted basic macros

The problem is that there is a ZipEntry ZipPackageStream::aEntry which
does not necessarily correspond to the values read from the Zip central
directory, because of a call to ZipPackageStream::setSize() in
ZipPackageStream::successfullyWritten() to override nSize and nMethod
for encrypted entries.

This triggers the consistency checks in readLOC(), where this aEntry is
passed.

Refactor things so that ZipPackageStream::aEntry and thus hopefully all
ZipEntry instances correspond to the Zip file's central directory.

For encrypted entries, store the decompressed size (which is read from
manifest.xml) in m_nOwnStreamOrigSize and pass it as a separate
parameter to the ZipFile functions that need it, and ultimately to
XUnbufferedStream, resolving multiple TODO comments.

(regression from commit efae4fc42d5fe3c0a69757226f38efc10d101194)

Change-Id: Ib6ea32595c6027b98da9196a2e2bd0a99b62a983
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173273
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 33d55465d9f81863b88d649a46353cc4d19cd253)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173297
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit d290716ba140cdb3282cd542d1cd6f12709ae06f)