package/source/zipapi/ZipOutputStream.cxx
@@ -87,7 +87,10 @@ void ZipOutputStream::rawCloseEntry( bool bEncrypt )
         writeDataDescriptor(*m_pCurrentEntry);
 
     if (bEncrypt)
+    {
         m_pCurrentEntry->nMethod = STORED;
+        assert(m_pCurrentEntry->nSize == m_pCurrentEntry->nCompressedSize);
+    }
 
     m_pCurrentEntry = nullptr;
 }
